{{$NEXT}}

0.14      2011-10-29 16:19:49 America/Denver
          [Refinements]
          - Config read only once on app startup now
          - Configs merged with a precendence
          [Remedies]
          - require verison 0.02 of MooX::Types::MooseLike

0.13      2011-10-24 08:31:15 America/Denver
          [Remedies]
          - publish.t was running on smokers when it should not
          
          [Refinements]
          - Limit number of recent articles displayed via 
            'last_link_number' config option

0.12      2011-09-26 16:48:22 America/Denver
          [Refinements]
          - Made Mojito::Types into its own distribution (MooX::Types::MooseLike)
            and use that instead

0.11      2011-07-07 21:36:14 America/Denver
          [Enchantments]
          - Collections: 
            - delete
            - navigation: next, previous, index
            - merge, epub

0.10      2011-05-02 21:27:52 America/Boise
          [Enchantments]
          - Collections: creatable, selectable and sortable
          - arbitrary diff potential
          - Publish to MojoMojo feature
          - MojoMojo table of contents support
          - MojoMojo syntax highlight support (class=prettyprint)
          
          [Refinements]
          - the css of both syntax highlighters: prettyprint and SHJS, has been refined
          - user name and email added to git commits
          
          [Remedies]
          - preserve title during auto-save

0.09      2011-03-24 22:46:23 America/Denver
          [Remedies]
          - Implicit sections properly added
          
          [Enchantments]
          - git is in the house (git backend for revisions and simple search via git grep)
            ${base_url}search/$search_word is the URI
          - Multiple wiki language support (textile, markdown, creole)

          [View]
          - A little style added for forms (via jQuery UI)
          - recent area style refined
